--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -67,14 +67,14 @@ Generate a GOODBYE command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
-@deftypefun {char *} {lw6msg_cmd_generate_data} (int @var{serial}, int @var{i}, int @var{n}, int @var{round}, const char * @var{ker_msg})
+@deftypefun {char *} {lw6msg_cmd_generate_data} (int @var{serial}, int @var{i}, int @var{n}, int64_t @var{seq}, const char * @var{ker_msg})
 @var{serial}:  the message serial number
 
 @var{i}:  the message index in the group
 
 @var{n}:  the number of messages in the group
 
-@var{round}:  the message round (can have an offset with real round)
+@var{seq}:  the message seq (round + an offset)
 
 @var{ker_msg}:  the actual content of the message (passed to core algo)
 
@@ -175,14 +175,14 @@ Analyzes a GOODBYE message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_data} (int * @var{serial}, int * @var{i}, int * @var{n}, int * @var{round}, char ** @var{ker_msg}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_data} (int * @var{serial}, int * @var{i}, int * @var{n}, int64_t * @var{seq}, char ** @var{ker_msg}, const char * @var{msg})
 @var{serial}:  will contain serial number on success
 
 @var{i}:  will contain group index on success
 
 @var{n}:  will contain group size on success
 
-@var{round}:  will contain round on success (can have an offset with real round)
+@var{seq}:  will contain seq on success (round + an offset)
 
 @var{ker_msg}:  will contain actual message on success
 
