--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-20 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Got rid of SIGPIPE on send/recv with tcp sockets.
+
 2012-08-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* mod-gles2 now has event loop support.
