--- a/liquidwar6/doc/net-gdoc.texi
+++ b/liquidwar6/doc/net-gdoc.texi
@@ -343,11 +343,12 @@ by peer or other serious problem, socket is closed and sock set to -1.
 @strong{Return value:}  number of bytes received, 0 when nothing
 @end deftypefun
 
-@deftypefun {int} {lw6net_tcp_is_alive} (int @var{sock})
+@deftypefun {int} {lw6net_tcp_is_alive} (int * @var{sock})
 @var{sock}:  socket to test
 
 Tells wether a socket is alive and able to send data. This function
-will attempt a write to test if it's really usable.
+will attempt a write to test if it's really usable. If not, will
+close in on the fly.
 
 @strong{Return value:}  1 if alive, 0 if not.
 @end deftypefun
