--- a/liquidwar6/doc/srv-doxygen.texi
+++ b/liquidwar6/doc/srv-doxygen.texi
@@ -180,7 +180,7 @@ Pointer on lw6srv_close callback code.
 @defcv {Member} {lw6srv_backend_s} {send}
 @strong{Type:} @code{int(*}
 
-@strong{Definition:} @code{int(* lw6srv_backend_s::send)(void *srv_context, lw6cnx_connection_t *connection, u_int32_t physical_ticket_sig, u_int32_t logical_ticket_sig, u_int64_t logical_from_id, u_int64_t logical_to_id, const char *message)}
+@strong{Definition:} @code{int(* lw6srv_backend_s::send)(void *srv_context, lw6cnx_connection_t *connection, int64_t now, u_int32_t physical_ticket_sig, u_int32_t logical_ticket_sig, u_int64_t logical_from_id, u_int64_t logical_to_id, const char *message)}
 
 
 Pointer on lw6srv_send callback code.         
