--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -274,3 +274,28 @@ someone else might have them.
 @strong{Return value:}  none
 @end deftypefun
 
+@deftypefun {void} {lw6dat_warehouse_reset_nb_atom_parts_since_last_poll} (lw6dat_warehouse_t *             @var{warehouse})
+@var{warehouse}:  data warehouse to reset
+
+Resets the nb_atom_parts_since_last_poll attribute of
+every stack.
+
+@strong{Return value:}  none
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_get_nb_atom_parts_since_last_poll} (lw6dat_warehouse_t *           @var{warehouse}, u_int64_t @var{remote_id})
+@var{warehouse}:  data warehouse to get info from
+
+@var{remote_id}:  remote id to get info about
+
+Returns the nb_atom_parts_since_last_poll attribute of the stack
+concerning the remote_id. The idea is to track down, since the
+last call to the companion reset function, how many "atom parts"
+have been received, by "atom part" we mean atoms representing a
+splitted message. Usually this corresponds to very long messages
+and if this number of splitted messages is large enough, we don't
+send MISS commands, as it would overload the network for nothing.
+
+@strong{Return value:}  number of atom parts received since last reset.
+@end deftypefun
+
