--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-29 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Factorized backlog code.
+
 2012-08-27 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added new strategies not to overload network with MISS messages.
