--- a/liquidwar6/doc/cnx-gdoc.texi
+++ b/liquidwar6/doc/cnx-gdoc.texi
@@ -1,3 +1,45 @@
+@deftypefun {void} {lw6cnx_backlog_zero} (lw6cnx_backlog_t * @var{backlog})
+@var{backlog}:  struct to initialize
+
+Fills the struct with zeros, ignoring what was in there before
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cnx_backlog_reset} (lw6cnx_backlog_t * @var{backlog})
+@var{backlog}:  struct to reset
+
+Resets the structure, freeing any ressource it was holding.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cnx_backlog_push} (lw6cnx_backlog_t * @var{backlog}, char * @var{str})
+@var{backlog}:  struct to add stuff to
+
+@var{str}:  string to add
+
+Adds a string to the backlog. Be careful, the function will not duplicate
+the string but assume it's been dynamically allocated, and will free it
+when it's done with it.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6cnx_backlog_filter} (lw6cnx_backlog_t * @var{backlog}, lw6cnx_backlog_filter_func_t @var{func}, lw6cnx_backlog_filter_data_t * @var{func_data})
+@var{backlog}:  struct to filter
+
+@var{func}:  function used for filter
+
+@var{func_data}:  additionnal data passed to function
+
+Filters the internal backlog list, the filter function, as standard list
+filter funcs, should return 1 if the record is to be kept, and 0 if it
+must be deleted, typically because it finally has been sent.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {lw6cnx_connection_t *} {lw6cnx_connection_new} (const char * @var{local_url}, const char * @var{remote_url}, const char * @var{remote_ip}, int @var{remote_port}, const char * @var{password}, u_int64_t @var{local_id}, u_int64_t @var{remote_id}, int @var{dns_ok}, int @var{network_reliability}, lw6cnx_recv_callback_t @var{recv_callback_func}, void * @var{recv_callback_data})
 @var{local_url}:  the local public URL
 
