--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -193,8 +193,10 @@ Gives a readable representation of the node
 @strong{Return value:}  a dynamically allocated string
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_poll} (lw6p2p_node_t * @var{node})
+@deftypefun {int} {lw6p2p_node_poll} (lw6p2p_node_t * @var{node}, lw6sys_progress_t * @var{progress})
 @var{node}:  the node to poll
+
+@var{progress}:  progress indicator to show the advancement
 
 Polls a p2p node. This must be called on a regular basis, else
 network communication is stalled.
@@ -245,12 +247,14 @@ nodes, disconnect it from any peer.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_client_join} (lw6p2p_node_t * @var{node}, u_int64_t @var{remote_id}, const char * @var{remote_url})
+@deftypefun {int} {lw6p2p_node_client_join} (lw6p2p_node_t * @var{node}, u_int64_t @var{remote_id}, const char * @var{remote_url}, lw6sys_progress_t * @var{progress})
 @var{node}:  node to use
 
 @var{remote_id}:  id of remote node to join
 
 @var{remote_url}:  url of remote node to join
+
+@var{progress}:  progress indicator to show end-user the advancement of process
 
 Starts a node in client mode, joins the given node, 
 if node was previously connected to other
