--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-18 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added framework for mod-soft software only graphics baclend.
+
 2012-08-29 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Factorized backlog code.
