--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -766,6 +766,13 @@ Tells wether the graphical mod-gles2 backend was compiled.
 @strong{Return value:}  "yes" or "no", must no be freed.
 @end deftypefun
 
+@deftypefun {char *} {lw6sys_build_get_enable_mod_soft} ()
+
+Tells wether the graphical mod-soft backend was compiled.
+
+@strong{Return value:}  "yes" or "no", must no be freed.
+@end deftypefun
+
 @deftypefun {char *} {lw6sys_build_get_enable_mod_csound} ()
 
 Tells wether the audio mod-csound backend was compiled.
