--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2012-09-19 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Started GFX SDL-based renderers refactoring.
+
 	* Added dyn code to support loading of non-module shared code.
 
 2012-09-18 : Christian Mauduit <ufoot@ufoot.org>
